[package]
name = "nomifun-companion"
version.workspace = true
edition.workspace = true

[dependencies]
nomifun-common.workspace = true
nomi-redact.workspace = true
nomi-memory.workspace = true
nomifun-db.workspace = true
nomifun-api-types.workspace = true
nomifun-realtime.workspace = true
nomifun-ai-agent.workspace = true
nomifun-extension.workspace = true
nomifun-auth.workspace = true
nomifun-conversation.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
tracing.workspace = true
async-trait.workspace = true
zip.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
