[package]
name = "nomifun-conversation"
version.workspace = true
edition.workspace = true

[dependencies]
nomifun-common.workspace = true
nomifun-db.workspace = true
nomifun-api-types.workspace = true
nomifun-realtime.workspace = true
nomifun-auth.workspace = true
nomifun-ai-agent.workspace = true
nomifun-extension.workspace = true
nomifun-file.workspace = true
nomifun-knowledge.workspace = true
nomifun-preset.workspace = true
nomifun-mcp.workspace = true
nomifun-runtime.workspace = true
axum.workspace = true
regex.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# Enable the `AgentRuntimeHandle::Mock` variant so tests can build fake Agents
# through the trait-object escape hatch without spawning real CLI processes.
nomifun-ai-agent = { workspace = true, features = ["test-support"] }
