[package]
name = "nomifun-cron"
version.workspace = true
edition.workspace = true

[dependencies]
nomifun-common.workspace = true
nomifun-db.workspace = true
nomifun-api-types.workspace = true
nomifun-realtime.workspace = true
nomifun-conversation.workspace = true
nomifun-ai-agent.workspace = true
nomifun-auth.workspace = true
axum.workspace = true
cron.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
async-trait.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
# Enable the `AgentInstance::Mock` variant so tests can build fake agents
# through the trait-object escape hatch without spawning real CLI processes.
nomifun-ai-agent = { workspace = true, features = ["test-support"] }
