[package]
name = "nomifun-db"
version.workspace = true
edition.workspace = true

[dependencies]
nomifun-common.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
async-trait.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
libc.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
ts-rs.workspace = true
